// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App render should match the snapshot when there is a user id 1`] = `
<div
  className="App"
>
  <Header
    handleSignOut={[Function]}
    user={
      Object {
        "id": "abc123",
      }
    }
    windowInnerWidth={1024}
  />
  <div>
    <Switch>
      <Route
        component={[Function]}
        path="/schedule"
      />
      <Route
        component={[Function]}
        path="/book-pairing"
      />
      <Route
        component={[Function]}
        path="/rock-pebble"
      />
      <Route
        component={[Function]}
        path="/rock-listing"
      />
      <Route
        component={[Function]}
        path="/confirm/:id"
      />
      <Route
        component={[Function]}
        path="/edit-profile"
      />
      <Route
        component={[Function]}
        path="/stats-profile"
      />
      <Route
        path="/edit-availability"
        render={[Function]}
      />
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;

exports[`App render should match the snapshot when there is no user id 1`] = `
<div
  className="App"
>
  <Header
    handleSignOut={[Function]}
    user={Object {}}
    windowInnerWidth={1024}
  />
  <div>
    <Switch>
      <Route
        exact={true}
        path="/"
        render={[Function]}
      />
      <Route
        path="/set-availability"
        render={[Function]}
      />
      <Route
        path="/schedule"
        render={[Function]}
      />
      <Route
        path="/book-pairing"
        render={[Function]}
      />
      <Route
        render={[Function]}
      />
    </Switch>
  </div>
</div>
`;
